<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    tools:context=".SignInActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@color/colorBlack">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:layout_margin="16dp"
                android:padding="16dp"
                card_view:cardElevation="2dp"
                card_view:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:background="@color/colorWhite">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="127dp"
                        android:layout_height="126dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="70dp"
                        android:padding="10dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/signin" />


                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColorHint="@color/colorRedh"
                        android:textColor="@color/colorRed"
                        android:background="@drawable/edittext"
                        android:maxLines="1"
                        android:ems="10"
                        android:hint="@string/user_name"
                        android:layout_marginTop="20dp"/>

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext"
                        android:textColorHint="@color/colorRedh"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColor="@color/colorRed"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:ems="10"
                        android:layout_marginTop="8dp"
                        android:hint="@string/password" />

                    <EditText
                        android:id="@+id/confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext"
                        android:textColorHint="@color/colorRedh"
                        android:drawablePadding="12dp"
                        android:padding="8dp"
                        android:textColor="@color/colorRed"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:ems="10"
                        android:layout_marginTop="8dp"
                        android:hint="@string/conpassword" />


                    <Button
                        android:id="@+id/button"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:text="@string/singein"
                        android:textColor="@color/colorRed"
                        android:background="@drawable/btn_sign_up"
                        android:onClick="signup" />



                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>