<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >


    <androidx.appcompat.widget.Toolbar
        app:layout_scrollFlags="scroll|enterAlways"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/travel_new">

            <ImageView
                android:id="@+id/info_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/location_detail"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:padding="8dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_detail"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/location_detail"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="120dp">

                    <Button
                        android:id="@+id/previous_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorRed"
                        android:background="@android:color/transparent"
                        android:text="@string/previous" />

                    <Button
                        android:id="@+id/next_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorRed"
                        android:background="@android:color/transparent"
                        android:layout_toRightOf="@+id/previous_btn"
                        android:text="@string/next" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/location_name"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/location_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>



                <CheckBox
                    android:id="@+id/favorite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/favorites"
                    android:onClick="onFavoriteClicked"/>

                <CheckBox
                    android:id="@+id/beencheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/wherebeen"
                    android:onClick="onbeenClicked"/>

                <Button
                    android:id="@+id/btn_sharemap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:onClick="sharemap"
                    android:background="@drawable/btn_login"
                    android:layout_toRightOf="@+id/previous_btn"
                    android:text="Share with Map" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="Comments :"/>

                <EditText
                    android:id="@+id/comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter your comment hear...."
                    android:layout_marginTop="20dp"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/btn_login"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:onClick="insertcomment"
                    android:layout_height="wrap_content"
                    android:text="Submit" />




                <ListView
                    android:id="@+id/list_comment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="30.0sp"/>



            </LinearLayout>



        </FrameLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>